Home page styling for mobile: header

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/24dd7fc6b2.js" crossorigin="anonymous"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello!</h1>
+    <header class="primary-header">
+        <img class="primary-header__logo" src="assets/logo/ohmyfood.png" alt="ohmyfood logo">
+    </header>
+    <div class="location">
+       <span class="location__user"><i class="fa-solid fa-location-dot"></i>
+          Paris, Butte-Aux-Cailles</span> 
+    </div>
+    <div class="explore-container">
+        <p class="explore-container__item explore-container__item--headline">Book the menu you like</p>
+        <p class="explore-container__item explore-container__item--text">Discover top-of-the-art restaurants we picked for you</p>
+        <a href="#" class="explore-container__item main-btn explore-container__item--btn">Explore our restaurants</a>
+    </div>
+    <main>
+        <div class="how-container">
+            <h1>How it works</h1>
+            <div class="how-container-cards">
+                <div class="how-container__card"></div>
+                <div class="how-container__card"></div>
+                <div class="how-container__card"></div>
+            </div>
+        </div>
+        <div class="restaurants">
+            <h1>restaurants</h1>
+            <div class="restaurants-container">
+                <div class="restaurants-container__card"></div>
+                <div class="restaurants-container__card"></div>
+                <div class="restaurants-container__card"></div>
+                <div class="restaurants-container__card"></div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <ul>
+                <li><a href="#">ohmyfood</a></li>
+                <li><a href="#">Suggest a restaurant</a></li>
+                <li><a href="#">Become a partner</a></li>
+                <li><a href="#">Legal</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
