how it works styling

--- a/src/index.html
+++ b/src/index.html
@@ -25,15 +25,27 @@
     </div>
     <main>
         <div class="how-container">
-            <h1>How it works</h1>
+            <p class="how-container__headline">How it works</p>
             <div class="how-container-cards">
-                <div class="how-container__card"></div>
-                <div class="how-container__card"></div>
-                <div class="how-container__card"></div>
+                <div class="how-container-cards__card how-container__card--choose">
+                    <div class="how-card-number">1</div>
+                    <div class="how-card-icon"><i class="fa-solid fa-mobile-screen"></i></div>
+                    <p>Choose a restaurant</p>
+                </div>
+                <div class="how-container-cards__card how-container__card--create">
+                    <div class="how-card-number">2</div>
+                    <div class="how-card-icon"><i class="fa-solid fa-list"></i></div>
+                    <p>Create your menu</p>
+                </div>
+                <div class="how-container-cards__card how-container__card--go">
+                    <div class="how-card-number">3</div>
+                    <div class="how-card-icon"><i class="fa-solid fa-store"></i></div>
+                    <p>Go enjoy it at the restaurant</p>
+                </div>
             </div>
         </div>
         <div class="restaurants">
-            <h1>restaurants</h1>
+            <p>restaurants</p>
             <div class="restaurants-container">
                 <div class="restaurants-container__card"></div>
                 <div class="restaurants-container__card"></div>
