footer, button hover and box shadow

--- a/src/index.html
+++ b/src/index.html
@@ -45,21 +45,65 @@
             </div>
         </div>
         <div class="restaurants">
-            <p>restaurants</p>
+            <p class="restaurants-headline">restaurants</p>
             <div class="restaurants-container">
-                <div class="restaurants-container__card"></div>
-                <div class="restaurants-container__card"></div>
-                <div class="restaurants-container__card"></div>
-                <div class="restaurants-container__card"></div>
+                <div class="restaurants-card">
+                    <img class="restaurants-card__image" src="assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                    <div class="restaurants-card__content">
+                        <div class="restaurant-card__info">
+                            <p class="restaurants-card--name">Le Gourmand</p>
+                            <p class="restaurants-card--location">Paris</p>
+                        </div>
+                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                        </div>
+                    </div>
+                </div>    
+                <div class="restaurants-card">
+                    <img class="restaurants-card__image" src="assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                    <div class="restaurants-card__content">
+                        <div class="restaurant-card__info">
+                            <p class="restaurants-card--name">Le Gourmand</p>
+                            <p class="restaurants-card--location">Paris</p>
+                        </div>
+                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="restaurants-card">
+                    <img class="restaurants-card__image" src="assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                    <div class="restaurants-card__content">
+                        <div class="restaurant-card__info">
+                            <p class="restaurants-card--name">Le Gourmand</p>
+                            <p class="restaurants-card--location">Paris</p>
+                        </div>
+                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="restaurants-card">
+                    <img class="restaurants-card__image" src="assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                    <div class="restaurants-card__content">
+                        <div class="restaurant-card__info">
+                            <p class="restaurants-card--name">Le Gourmand</p>
+                            <p class="restaurants-card--location">Paris</p>
+                        </div>
+                        <div class="restaurants-card__icon"><i class=" fa fa-regular fa-heart fa-hover-hidden"></i>
+                            <i class="fa fa-solid fa-heart fa-hover-show"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
     <footer>
         <div class="footer-container">
-            <ul>
-                <li><a href="#">ohmyfood</a></li>
-                <li><a href="#">Suggest a restaurant</a></li>
-                <li><a href="#">Become a partner</a></li>
+            <ul class="footer-container__items">
+                <li><a href="#"><h2>ohmyfood</h3></a></li>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
                 <li><a href="#">Legal</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
