menu container and cards, menu button, footer

--- a/public/pages/restaurant-1.html
+++ b/public/pages/restaurant-1.html
@@ -18,10 +18,11 @@
     <main class="menu-page">
         <div class="menu">
             <div class="menu__head">
-                <div class="menu__head--name">The Full palette</div>
-                <div class="menu__head--icon"><i class="fa-solid fa-utensils"></i></div>
+                <div class="menu__head--name"><h1>The Full palette</h1></div>
+                <div class="menu__head--icon"><i class="fa-regular fa-heart"></i></div>
             </div>
-            <div class="menu-container"> entrees
+            <div class="menu-container">
+                <p class="menu-container__headline">entrees</p>
                 <div class="menu-card">
                     <div class="menu-card__name">
                         <div class="menu-card--item">Escargot</div>
@@ -44,7 +45,8 @@
                     <div class="menu-card__price">25</div>    
                 </div>
             </div>
-            <div class="menu-container"> entrees
+            <div class="menu-container"> 
+                <p class="menu-container__headline">main</p>
                 <div class="menu-card">
                     <div class="menu-card__name">
                         <div class="menu-card--item">Escargot</div>
@@ -67,7 +69,8 @@
                     <div class="menu-card__price">25</div>    
                 </div>
             </div>
-            <div class="menu-container"> entrees
+            <div class="menu-container">
+                <p class="menu-container__headline">desserts</p>
                 <div class="menu-card">
                     <div class="menu-card__name">
                         <div class="menu-card--item">Escargot</div>
@@ -93,7 +96,7 @@
         </div>
         <div class="order-btn">Order</div>
         <footer>
-            <div class="rst-footer-container">
+            <div class="rst-footer-container footer-container">
                 <ul class="footer-container__items">
                     <li><a href="#"><h2>ohmyfood</h3></a></li>
                         <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
