--- a/public/pages/restaurant-4.html
+++ b/public/pages/restaurant-4.html
@@ -1,24 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/24dd7fc6b2.js" crossorigin="anonymous"></script>
+    <title>Restaurant one</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="primary-header">
         <img class="primary-header__logo" src="../assets/logo/ohmyfood.png" alt="ohmyfood logo">
     </header>
-    <main>
-    </main>
-    <footer>
-        <div class="footer-container">
-            <ul class="footer-container__items">
-                <li><a href="#"><h2>ohmyfood</h3></a></li>
-                <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
-                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
-                <li><a href="#">Legal</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+    <img class="rst-page-main-image" src="../assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille restaurant plates with food">
+    <main class="menu-page">
+        <div class="menu">
+            <div class="menu__head">
+                <div class="menu__head--name"><h1>Bastille</h1></div>
+                <div class="menu__head--icon"><i class="fa-regular fa-heart"></i></div>
+            </div>
+            <div class="menu-container">
+                <p class="menu-container__headline">entrees</p>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>
+                </div>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>    
+                </div>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>    
+                </div>
+            </div>
+            <div class="menu-container"> 
+                <p class="menu-container__headline">main</p>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>
+                </div>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>    
+                </div>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>    
+                </div>
+            </div>
+            <div class="menu-container">
+                <p class="menu-container__headline">desserts</p>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>
+                </div>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>    
+                </div>
+                <div class="menu-card">
+                    <div class="menu-card__name">
+                        <div class="menu-card--item">Escargot</div>
+                        <div class="menu-card--info">With some french spices</div>
+                    </div>
+                    <div class="menu-card__price">25</div>    
+                </div>
+            </div>
         </div>
-    </footer>
+        <div class="order-btn">Order</div>
+        <footer>
+            <div class="rst-footer-container footer container">
+                <ul class="footer-container__items">
+                    <li><a href="#"><h2>ohmyfood</h3></a></li>
+                        <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
+                        <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
+                        <li><a href="#">Legal</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </footer>
+        </main>
 </body>
 </html>
