--- a/public/pages/restaurant-1.html
+++ b/public/pages/restaurant-1.html
@@ -23,68 +23,118 @@
             </div>
             <div class="menu-container">
                 <p class="menu-container__headline">entrees</p>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--1">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
                     </div>
-                    <div class="menu-card__price">25</div>
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--2">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
+                    </div>
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--3">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
                     </div>
-                    <div class="menu-card__price">25</div>    
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
             </div>
-            <div class="menu-container"> 
-                <p class="menu-container__headline">main</p>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+            <div class="menu-container">
+                <p class="menu-container__headline">Main</p>
+                <div class="menu-card menu-card--1">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
+                    </div>
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--2">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
                     </div>
-                    <div class="menu-card__price">25</div>    
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--3">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
+                    </div>
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
             <div class="menu-container">
                 <p class="menu-container__headline">desserts</p>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--1">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
+                    </div>
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
                     </div>
                 </div>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--2">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
                     </div>
-                    <div class="menu-card__price">25</div>    
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
+                    </div>
                 </div>
-                <div class="menu-card">
-                    <div class="menu-card__name">
-                        <div class="menu-card--item">Escargot</div>
-                        <div class="menu-card--info">With some french spices</div>
+                <div class="menu-card menu-card--3">
+                    <div class="menu-card__info">
+                        <div class="menu-card-name">
+                            <div class="menu-card-name__item">Escargot</div>
+                            <div class="menu-card-name__text">With some french spices</div>
+                        </div>
+                        <div class="menu-card-price">25€</div>
+                    </div>
+                    <div class="menu-card__rightside">
+                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
                     </div>
                 </div>
             </div>
