--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="loader">
+        <div class="spinner"></div>
+    </div>
     <header class="primary-header">
         <img class="primary-header__logo" src="assets/logo/ohmyfood.png" alt="ohmyfood logo">
     </header>
