--- a/public/pages/restaurant-2.html
+++ b/public/pages/restaurant-2.html
@@ -8,149 +8,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/24dd7fc6b2.js" crossorigin="anonymous"></script>
     <title>Restaurant one</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="primary-header">
-        <img class="primary-header__logo" src="../assets/logo/ohmyfood.png" alt="ohmyfood logo">
+        <img class="primary-header__logo" src="assets/logo/ohmyfood.png" alt="ohmyfood logo">
     </header>
-    <img class="rst-page-main-image" src="../assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Bastille restaurant plates with food">
-    <main class="menu-page">
-        <div class="menu">
-            <div class="menu__head">
-                <div class="menu__head--name"><h1>The Full palette</h1></div>
-                <div class="menu__head--icon"><i class="fa-regular fa-heart"></i></div>
-            </div>
-            <div class="menu-container">
-                <p class="menu-container__headline">entrees</p>
-                <div class="menu-card menu-card--1">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="menu-card menu-card--2">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="menu-card menu-card--3">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-container">
-                <p class="menu-container__headline">Main</p>
-                <div class="menu-card menu-card--1">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="menu-card menu-card--2">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="menu-card menu-card--3">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-container">
-                <p class="menu-container__headline">desserts</p>
-                <div class="menu-card menu-card--1">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="menu-card menu-card--2">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-                <div class="menu-card menu-card--3">
-                    <div class="menu-card__info">
-                        <div class="menu-card-name">
-                            <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices</div>
-                        </div>
-                        <div class="menu-card-price">25€</div>
-                    </div>
-                    <div class="menu-card__rightside">
-                        <i class="menu-card__rightside--icon fa-solid fa-circle-check"></i>
-                    </div>
-                </div>
-            </div>
+    <main>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <ul class="footer-container__items">
+                <li><a href="#"><h2>ohmyfood</h3></a></li>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
+                <li><a href="#">Legal</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
-        <div class="order-btn">Order</div>
-        <footer>
-            <div class="rst-footer-container footer-container">
-                <ul class="footer-container__items">
-                    <li><a href="#"><h2>ohmyfood</h3></a></li>
-                        <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
-                        <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
-                        <li><a href="#">Legal</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </main>
+    </footer>
 </body>
 </html>
