copy to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="loader">
-        <div class="spinner"></div>
-    </div>
+    <div class="loader-wrapper">
+        <div class="loader">
+            <div class="spinner"></div>
+        </div>
     <header class="primary-header">
         <img class="primary-header__logo" src="assets/logo/ohmyfood.png" alt="ohmyfood logo">
     </header>
