--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <footer>
             <div class="footer-container">
                 <ul class="footer-container__items">
-                    <li><a href="#"><h2>ohmyfood</a></li>
+                    <li><a href="#"><h2>ohmyfood</h2></a></li>
                     <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
                     <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
                     <li><a href="#">Legal</a></li>
