footer fix wc3 errors

--- a/src/pages/restaurant-1.html
+++ b/src/pages/restaurant-1.html
@@ -144,11 +144,11 @@
         <footer>
             <div class="rst-footer-container footer-container">
                 <ul class="footer-container__items">
-                    <li><a href="#"><h2>ohmyfood</h3></a></li>
+                    <li><a href="#"><h2>ohmyfood</h2></a></li>
                         <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
                         <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
                         <li><a href="#">Legal</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="mailto:abc@example.com">Contact</a></li>
                     </ul>
                 </div>
             </footer>
