footer ul mistake

--- a/pages/restaurant-1.html
+++ b/pages/restaurant-1.html
@@ -142,7 +142,7 @@
         </div>
         <div class="order-btn">Order</div>
         <footer>
-            <div class="rst-footer-container footer-container">
+            <div class="footer-container">
                 <ul class="footer-container__items">
                     <li><a href="#"><h2>ohmyfood</h2></a></li>
                     <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
@@ -150,8 +150,8 @@
                     <li><a href="#">Legal</a></li>
                     <li><a href="mailto:abc@example.com">Contact</a></li>
                 </ul>
-                </div>
-            </footer>
+            </div>
+        </footer>
         </main>
 </body>
 </html>
