--- a/src/pages/restaurant-1.html
+++ b/src/pages/restaurant-1.html
@@ -142,16 +142,16 @@
         </div>
         <div class="order-btn">Order</div>
         <footer>
-            <div class="rst-footer-container footer-container">
+            <div class="footer-container">
                 <ul class="footer-container__items">
                     <li><a href="#"><h2>ohmyfood</h2></a></li>
-                        <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
-                        <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
-                        <li><a href="#">Legal</a></li>
-                        <li><a href="mailto:abc@example.com">Contact</a></li>
-                    </ul>
-                </div>
-            </footer>
-        </main>
+                    <li><a href="#"><i class="fa-solid fa-utensils"></i> Suggest a restaurant</a></li>
+                    <li><a href="#"><i class="fa-solid fa-handshake-angle"></i> Become a partner</a></li>
+                    <li><a href="#">Legal</a></li>
+                    <li><a href="mailto:abc@example.com">Contact</a></li>
+                </ul>
+            </div>
+        </footer>
+    </main>
 </body>
 </html>
