--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/24dd7fc6b2.js" crossorigin="anonymous"></script>
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Ohmyfood</title>
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <div class="loader-wrapper">
