--- a/src/pages/restaurant-1.html
+++ b/src/pages/restaurant-1.html
@@ -28,7 +28,7 @@
                     <div class="menu-card__info">
                         <div class="menu-card-name">
                             <div class="menu-card-name__item">Escargot</div>
-                            <div class="menu-card-name__text">With some french spices fjriej neiorngoien goinegoi negov ijrenriejnrvijenvjn ijrn vijnervijnrijne vi</div>
+                            <div class="menu-card-name__text">With some french spices</div>
                         </div>
                         <div class="menu-card-price">25€</div>
                     </div>
